; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_destination.c_HPDF_Destination_Validate.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_destination.c_HPDF_Destination_Validate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i32 }

@HPDF_OCLASS_ARRAY = common dso_local global i32 0, align 4
@HPDF_OSUBCLASS_DESTINATION = common dso_local global i32 0, align 4
@HPDF_FALSE = common dso_local global i32 0, align 4
@HPDF_OCLASS_DICT = common dso_local global i32 0, align 4
@HPDF_INVALID_PAGE = common dso_local global i32 0, align 4
@HPDF_TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @HPDF_Destination_Validate(%struct.TYPE_8__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i64, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  %6 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %7 = bitcast %struct.TYPE_8__* %6 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %7, %struct.TYPE_7__** %4, align 8
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %9 = icmp ne %struct.TYPE_8__* %8, null
  br i1 %9, label %10, label %18

10:                                               ; preds = %1
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @HPDF_OCLASS_ARRAY, align 4
  %15 = load i32, i32* @HPDF_OSUBCLASS_DESTINATION, align 4
  %16 = or i32 %14, %15
  %17 = icmp ne i32 %13, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %10, %1
  %19 = load i32, i32* @HPDF_FALSE, align 4
  store i32 %19, i32* %2, align 4
  br label %45

20:                                               ; preds = %10
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %21, i32 0, i32 1
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = icmp slt i32 %25, 2
  br i1 %26, label %27, label %29

27:                                               ; preds = %20
  %28 = load i32, i32* @HPDF_FALSE, align 4
  store i32 %28, i32* %2, align 4
  br label %45

29:                                               ; preds = %20
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %31 = load i32, i32* @HPDF_OCLASS_DICT, align 4
  %32 = call i64 @HPDF_Array_GetItem(%struct.TYPE_8__* %30, i32 0, i32 %31)
  store i64 %32, i64* %5, align 8
  %33 = load i64, i64* %5, align 8
  %34 = call i32 @HPDF_Page_Validate(i64 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %43, label %36

36:                                               ; preds = %29
  %37 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = load i32, i32* @HPDF_INVALID_PAGE, align 4
  %41 = call i32 @HPDF_SetError(i32 %39, i32 %40, i32 0)
  %42 = load i32, i32* @HPDF_FALSE, align 4
  store i32 %42, i32* %2, align 4
  br label %45

43:                                               ; preds = %29
  %44 = load i32, i32* @HPDF_TRUE, align 4
  store i32 %44, i32* %2, align 4
  br label %45

45:                                               ; preds = %43, %36, %27, %18
  %46 = load i32, i32* %2, align 4
  ret i32 %46
}

declare dso_local i64 @HPDF_Array_GetItem(%struct.TYPE_8__*, i32, i32) #1

declare dso_local i32 @HPDF_Page_Validate(i64) #1

declare dso_local i32 @HPDF_SetError(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
